# ridwaanhall-com

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDIVIDUAL_FILES_DOCS.md  LICENSE  PRE-INTERVIEW.md  README.md  SECURITY.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_error_system.py  vercel.json
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: suggest_project.yml
.github/workflows/: django.yml
FlexForge/: config.py  context_processors.py  settings.py  urls.py  views.py
FlexForge/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
RIDWAANHALL/: asgi.py  settings.py  urls.py  wsgi.py
docs/: BLOG_CONTENT_STRUCTURE.md  BLOG_MULTI_IMAGE_SYSTEM.md  BUILD.md  FLEXFORGE.md  GUESTBOOK_CONFIGURATION.md  INDIVIDUAL_FILES.md  PROJECT_MULTI_IMAGE_SYSTEM.md  SETTINGS_CONFIGURATION.md  SHOW_PROJECT.md  WSRV_IMAGE_OPTIMIZATION.md  about.md  blog.md  core.md  dashboard.md  data.md  guestbook.md  openhire.md  projects.md  seo.md
ridwaanhall_com/: asgi.py  error_handlers.py  middleware.py  settings.py  test_views.py  urls.py  views.py  wsgi.py
ridwaanhall_dev/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  base_seo.html  certifications.html  current_focus.html  daget.html  donate.html  education.html  error.html  experiences.html  featured_blogs.html  featured_posts.html  featured_projects.html  services.html  sidebar.html  site.webmanifest  social.html  social_links.html  tech_skills.html  test_errors.html  work_together.html
(+579 files in other folders)
