[project]
name = "ridwaanhall-com"
version = "0.1.0"
description = "Advanced developer portfolio platform built with Django."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "cryptography>=46.0.7",
    "django>=6.0.4",
    "django-allauth>=65.16.1",
    "django-csp>=4.0",
    "django-permissions-policy>=4.29.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "python-decouple>=3.8",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false
