[project]
name = "ridwaanhall-com"
version = "0.1.0"
description = "Advanced developer portfolio platform built with Django."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "django==6.0.6",
    "django-allauth>=65.16.1",
    "django-csp>=4.0",
    "django-permissions-policy>=4.29.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pyjwt>=2.13.0",
    "python-decouple>=3.8",
    "pytz>=2026.2",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "whitenoise>=6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "FlexForge.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
testpaths = ["apps"]
